--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.btn {
+  background-color: #948979;
   color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  width: 100%;
+  height: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.continue-btn-wrapper {
+  position: fixed;
+  padding: 10px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.checkbox-option {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #948979;
+  margin-bottom: 10px;
+  padding: 6px 10px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.checkbox-option--selected {
+  background-color: rgb(148, 137, 121, 0.2);
+}
+
+.page {
+  padding: 10px;
+}
+
+.progress-bar {
+  background-color: #948979;
+  height: 3px;
+  position: fixed;
+}
+
+.btn-stub {
+  height: 40px;
 }
